force-app/main/default/objects/AccountContactRelation/fields/Datasource__c.field-meta.xml
<CustomField>
    <fullName>Datasource__c</fullName>
    <label>Datasource_c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>