force-app/main/default/objects/AccountContactRelation/fields/Giving_amount__c.field-meta.xml
<CustomField>
    <fullName>Giving_amount__c</fullName>
    <label>Giving amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>