force-app/main/default/objects/AccountContactRelation/fields/sj_UI_AccountContactRelation__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_AccountContactRelation__c</fullName>
    <externalId>true</externalId>
    <label>sj_UI_AccountContactRelation__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>